// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ruby_third_parties_new_relic datatype_in_add_custom_attributes 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_new_relic",
      "title": "Sensitive data sent to New Relic detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to New Relic.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [New Relic Docs](https://docs.newrelic.com/)\\n- [Log obfuscation](https://docs.newrelic.com/docs/logs/ui-data/obfuscation-ui/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_new_relic",
      "line_number": 1,
      "full_filename": "/tmp/bearer-scan/datatype_in_add_custom_attributes.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 1,
        "end": 1,
        "column": {
          "start": 10,
          "end": 35
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 1,
          "end": 44
        },
        "content": "NewRelic::Agent.add_custom_attributes(user)"
      },
      "parent_line_number": 2,
      "snippet": "NewRelic::Agent.add_custom_attributes(user)",
      "fingerprint": "e91414b566cbe37b71f0714e38013f90_0",
      "old_fingerprint": "ad45949950d339338cc402a12fd5daee_0"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_new_relic",
      "title": "Sensitive data sent to New Relic detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to New Relic.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [New Relic Docs](https://docs.newrelic.com/)\\n- [Log obfuscation](https://docs.newrelic.com/docs/logs/ui-data/obfuscation-ui/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_new_relic",
      "line_number": 3,
      "full_filename": "/tmp/bearer-scan/datatype_in_add_custom_attributes.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 3,
        "end": 3,
        "column": {
          "start": 58,
          "end": 83
        }
      },
      "sink": {
        "start": 3,
        "end": 3,
        "column": {
          "start": 1,
          "end": 97
        },
        "content": "NewRelic::Agent.add_custom_attributes(a: \\"test\\", user: { email: \\"user@example.com\\" }, other: 42)"
      },
      "parent_line_number": 3,
      "snippet": "NewRelic::Agent.add_custom_attributes(a: \\"test\\", user: { email: \\"user@example.com\\" }, other: 42)",
      "fingerprint": "e91414b566cbe37b71f0714e38013f90_1",
      "old_fingerprint": "ad45949950d339338cc402a12fd5daee_1"
    }
  ]
}"
`;

exports[`ruby_third_parties_new_relic datatype_in_add_custom_parameters 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_new_relic",
      "title": "Sensitive data sent to New Relic detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to New Relic.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [New Relic Docs](https://docs.newrelic.com/)\\n- [Log obfuscation](https://docs.newrelic.com/docs/logs/ui-data/obfuscation-ui/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_new_relic",
      "line_number": 1,
      "full_filename": "/tmp/bearer-scan/datatype_in_add_custom_parameters.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Physical Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 1,
        "end": 1,
        "column": {
          "start": 10,
          "end": 24
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 1,
          "end": 44
        },
        "content": "NewRelic::Agent.add_custom_parameters(user)"
      },
      "parent_line_number": 2,
      "snippet": "NewRelic::Agent.add_custom_parameters(user)",
      "fingerprint": "e91414b566cbe37b71f0714e38013f90_0",
      "old_fingerprint": "cb7bb30d776feb081adcc47a41a13331_0"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_new_relic",
      "title": "Sensitive data sent to New Relic detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to New Relic.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [New Relic Docs](https://docs.newrelic.com/)\\n- [Log obfuscation](https://docs.newrelic.com/docs/logs/ui-data/obfuscation-ui/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_new_relic",
      "line_number": 3,
      "full_filename": "/tmp/bearer-scan/datatype_in_add_custom_parameters.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 3,
        "end": 3,
        "column": {
          "start": 47,
          "end": 72
        }
      },
      "sink": {
        "start": 3,
        "end": 3,
        "column": {
          "start": 1,
          "end": 75
        },
        "content": "NewRelic::Agent.add_custom_parameters(user: { email: \\"user@example.com\\" })"
      },
      "parent_line_number": 3,
      "snippet": "NewRelic::Agent.add_custom_parameters(user: { email: \\"user@example.com\\" })",
      "fingerprint": "e91414b566cbe37b71f0714e38013f90_1",
      "old_fingerprint": "cb7bb30d776feb081adcc47a41a13331_1"
    }
  ]
}"
`;

exports[`ruby_third_parties_new_relic datatype_in_notice_error 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_new_relic",
      "title": "Sensitive data sent to New Relic detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to New Relic.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [New Relic Docs](https://docs.newrelic.com/)\\n- [Log obfuscation](https://docs.newrelic.com/docs/logs/ui-data/obfuscation-ui/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_new_relic",
      "line_number": 1,
      "full_filename": "/tmp/bearer-scan/datatype_in_notice_error.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "14124881-6b92-4fc5-8005-ea7c1c09592e",
        "name": "Firstname"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 1,
        "end": 1,
        "column": {
          "start": 10,
          "end": 27
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 1,
          "end": 65
        },
        "content": "NewRelic::Agent.notice_error(exception, { custom_params: user })"
      },
      "parent_line_number": 2,
      "snippet": "NewRelic::Agent.notice_error(exception, { custom_params: user })",
      "fingerprint": "e91414b566cbe37b71f0714e38013f90_0",
      "old_fingerprint": "26a26a88854528c42a67b076cef5cdbb_0"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_new_relic",
      "title": "Sensitive data sent to New Relic detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to New Relic.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [New Relic Docs](https://docs.newrelic.com/)\\n- [Log obfuscation](https://docs.newrelic.com/docs/logs/ui-data/obfuscation-ui/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_new_relic",
      "line_number": 3,
      "full_filename": "/tmp/bearer-scan/datatype_in_notice_error.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "14124881-6b92-4fc5-8005-ea7c1c09592e",
        "name": "Lastname"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 3,
        "end": 3,
        "column": {
          "start": 74,
          "end": 90
        }
      },
      "sink": {
        "start": 3,
        "end": 3,
        "column": {
          "start": 1,
          "end": 109
        },
        "content": "NewRelic::Agent.notice_error(exception, expected: true, custom_params: { last_name: \\"foo\\" }, metric: \\"test\\")"
      },
      "parent_line_number": 3,
      "snippet": "NewRelic::Agent.notice_error(exception, expected: true, custom_params: { last_name: \\"foo\\" }, metric: \\"test\\")",
      "fingerprint": "e91414b566cbe37b71f0714e38013f90_1",
      "old_fingerprint": "26a26a88854528c42a67b076cef5cdbb_1"
    }
  ]
}"
`;

exports[`ruby_third_parties_new_relic ok_datatype_ignored 1`] = `"{}"`;

exports[`ruby_third_parties_new_relic ok_no_datatype 1`] = `"{}"`;
